--- a/question3/index.css
+++ b/question3/index.css
@@ -4,7 +4,7 @@ body {
 }
 .container {
   display: grid;
-  grid-template-columns: minmax(450px, 450px) minmax(200px, auto);
+  grid-template-columns: 450px minmax(200px, auto);
   grid-template-rows: 150px auto;
   height: 100vh;
 }
